--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ dependencies = [
     "ipykernel>=6.29.5",
     "pandas>=2.3.0",
     "pycountry>=24.6.1",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.4",
 ]
